[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes2/Pillar/Pillar.gd" type="Script" id=1]
[ext_resource path="res://RandomAssets/godot_logo.png" type="Texture" id=2]
[ext_resource path="res://Scenes2/Pillar/SendToIdle/SendToIdle.tscn" type="PackedScene" id=3]
[ext_resource path="res://RandomAssets/Squares/white.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 200 )

[node name="Pillar" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 200 )
texture = ExtResource( 4 )
offset = Vector2( 0, 16 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 200 )
shape = SubResource( 1 )

[node name="SendToIdle" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="SendToIdle/Detector" to="." method="_on_Detector_body_entered"]

[editable path="SendToIdle"]
